--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -53,3 +53,21 @@ section {
   padding: 10px;
   margin: 25px auto;
 }
+
+.btn {
+  box-shadow: 1px 1px 1px #CCC;
+  transition: all 0.25s ease;
+}
+
+.btn:hover {
+  box-shadow: 2px 2px 2px #CCC;
+}
+
+.btn-default {
+  background-color: #FCFCFC;
+  border: 1px solid #CCC;
+}
+
+.btn-default:hover {
+  background-color: #EFEFEF;
+}
