--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -49,7 +49,7 @@ form input.medium {
 }
 
 section {
-  border: 2px dashed #CCC;
+  border: 2px dashed #BAA133;
   border-radius: 10px;
   padding: 10px;
   margin: 25px auto;
